data/all_generated_tests/raw_wast_tests/return_IncorrectConditionEvaluation_2850.wast
;; 9. Create a function with loop constructs that include `br_if` conditions and ensure `return` is called based on these conditions at various loop stages. Confirm that each condition is evaluated precisely and results in expected returns and unwinding.

(assert_invalid
  (module
    (func $loop_with_br_if_conditions (param i32) (result i32)
      (local i32)
      (loop (result i32)
        (local.get 0)
        (i32.const 1)
        (i32.add)
        (local.set 0)
        (local.get 0)
        (i32.const 5)
        (i32.lt_s)
        (br_if 1 (return (local.get 0)))
      )
    )
  )
  "type mismatch"
)